rename `x`.`motion-serifed` → `x`.`unilateral-motion-serifed`

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1896,12 +1896,12 @@ selectorAffix."X/sansSerif" = "serifless"
 selectorAffix."X/descBase" = "serifless"
 selectorAffix."cyrl/Rha/right" = "serifless"
 
-[prime.capital-x.variants-buildup.stages.serifs.motion-serifed]
+[prime.capital-x.variants-buildup.stages.serifs.unilateral-motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs at top-left"
-selectorAffix.X = "motionSerifed"
+selectorAffix.X = "unilateralMotionSerifed"
 selectorAffix."X/sansSerif" = "serifless"
-selectorAffix."X/descBase" = "motionSerifed"
+selectorAffix."X/descBase" = "unilateralMotionSerifed"
 selectorAffix."cyrl/Rha/right" = "serifless"
 
 [prime.capital-x.variants-buildup.stages.serifs.bilateral-motion-serifed]
@@ -1909,7 +1909,7 @@ rank = 3
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.X = "bilateralMotionSerifed"
 selectorAffix."X/sansSerif" = "serifless"
-selectorAffix."X/descBase" = "motionSerifed"
+selectorAffix."X/descBase" = "unilateralMotionSerifed"
 selectorAffix."cyrl/Rha/right" = "bilateralMotionSerifed"
 
 [prime.capital-x.variants-buildup.stages.serifs.serifed]
@@ -4765,13 +4765,13 @@ selectorAffix."x/sansSerif" = "serifless"
 selectorAffix."x/descBase" = "serifless"
 selectorAffix."cyrl/rha/right" = "serifless"
 
-[prime.x.variants-buildup.stages.serifs.motion-serifed]
+[prime.x.variants-buildup.stages.serifs.unilateral-motion-serifed]
 rank = 2
 disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
 descriptionAffix = "motion serifs at top-left"
-selectorAffix.x = "motionSerifed"
+selectorAffix.x = "unilateralMotionSerifed"
 selectorAffix."x/sansSerif" = "serifless"
-selectorAffix."x/descBase" = "motionSerifed"
+selectorAffix."x/descBase" = "unilateralMotionSerifed"
 selectorAffix."cyrl/rha/right" = "serifless"
 
 [prime.x.variants-buildup.stages.serifs.bilateral-motion-serifed]
@@ -4780,7 +4780,7 @@ disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.x = "bilateralMotionSerifed"
 selectorAffix."x/sansSerif" = "serifless"
-selectorAffix."x/descBase" = "motionSerifed"
+selectorAffix."x/descBase" = "unilateralMotionSerifed"
 selectorAffix."cyrl/rha/right" = "bilateralMotionSerifed"
 
 [prime.x.variants-buildup.stages.serifs.serifed]
@@ -5929,11 +5929,11 @@ descriptionJoiner = "without"
 selectorAffix."grek/chi" = "serifless"
 selectorAffix."grek/chi/sansSerif" = "serifless"
 
-[prime.lower-chi.variants-buildup.stages.serifs.motion-serifed]
+[prime.lower-chi.variants-buildup.stages.serifs.unilateral-motion-serifed]
 rank = 2
 disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
 descriptionAffix = "motion serifs at top-left"
-selectorAffix."grek/chi" = "motionSerifed"
+selectorAffix."grek/chi" = "unilateralMotionSerifed"
 selectorAffix."grek/chi/sansSerif" = "serifless"
 
 [prime.lower-chi.variants-buildup.stages.serifs.bilateral-motion-serifed]
@@ -8844,7 +8844,7 @@ f = "flat-hook-tailed"
 k = "cursive-top-left-serifed"
 l = "tailed-serifed"
 u = "toothed-motion-serifed"
-x = "straight-motion-serifed"
+x = "straight-unilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 long-s = "flat-hook-descending"
 eszet = "longs-s-lig-descending-serifless"
@@ -9094,7 +9094,7 @@ lower-delta = "flat-top"
 lower-iota = "tailed-serifed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
-lower-chi = "straight-motion-serifed"
+lower-chi = "straight-unilateral-motion-serifed"
 cyrl-a = "double-storey-tailed"
 cyrl-ve = "standard-serifless"
 cyrl-capital-u = "straight-turn-serifless"
@@ -9385,7 +9385,7 @@ k = "curly-top-left-serifed"
 u = "toothed-motion-serifed"
 v = "curly-motion-serifed"
 w = "curly-motion-serifed"
-x = "curly-motion-serifed"
+x = "curly-unilateral-motion-serifed"
 y = "curly-motion-serifed"
 lower-mu = "toothed-motion-serifed"
 cyrl-ka = "curly-top-left-serifed"
@@ -9487,7 +9487,7 @@ k = "straight-top-left-serifed"
 r = "hookless-top-serifed"
 u = "toothed-motion-serifed"
 w = "straight-flat-top-motion-serifed"
-x = "straight-motion-serifed"
+x = "straight-unilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 cyrl-ve = "standard-unilateral-serifed"
 cyrl-u = "straight-turn-motion-serifed"
@@ -9570,7 +9570,7 @@ g = "single-storey-flat-hook-serifless"
 i = "serifed-flat-tailed"
 k = "symmetric-connected-top-left-serifed"
 l = "serifed-flat-tailed"
-x = "straight-motion-serifed"
+x = "straight-unilateral-motion-serifed"
 y = "cursive-flat-hook-motion-serifed"
 cyrl-u = "cursive-flat-hook-motion-serifed"
 micro-sign = "toothless-rounded-motion-serifed"
@@ -9731,7 +9731,7 @@ m = "earless-corner-double-arch-short-leg-bottom-right-serifed"
 n = "earless-corner-straight-motion-serifed"
 r = "earless-corner-serifless"
 u = "tailed-motion-serifed"
-x = "straight-motion-serifed"
+x = "straight-unilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 long-s = "bent-hook-tailed"
 eszet = "longs-s-lig-tailed-serifless"
@@ -9949,7 +9949,7 @@ g = "single-storey-flat-hook-serifless"
 k = "symmetric-connected-top-left-serifed"
 u = "toothless-rounded-motion-serifed"
 w = "straight-flat-top-motion-serifed"
-x = "straight-motion-serifed"
+x = "straight-unilateral-motion-serifed"
 y = "cursive-flat-hook-motion-serifed"
 long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
@@ -10458,7 +10458,7 @@ micro-sign = "tailed-serifed"
 f = "extended-crossbar-at-x-height"
 k = "symmetric-connected-top-left-serifed"
 u = "toothed-motion-serifed"
-x = "straight-motion-serifed"
+x = "straight-unilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 long-s = "flat-hook-descending-middle-serifed-xh"
 eszet = "longs-s-lig-descending-serifless"
