Eng: Move MJS compiled from PTL to `package/<name>/lib` directory

--- a/packages/font-glyphs/package.json
+++ b/packages/font-glyphs/package.json
@@ -3,9 +3,9 @@
   "version": "31.1.0",
   "private": true,
   "exports": {
-    ".": "./src/index.mjs",
-    "./aesthetics": "./src/meta/aesthetics.mjs",
-    "./unicode-knowledge": "./src/meta/unicode-knowledge.mjs"
+    ".": "./lib/index.mjs",
+    "./aesthetics": "./lib/meta/aesthetics.mjs",
+    "./unicode-knowledge": "./lib/meta/unicode-knowledge.mjs"
   },
   "dependencies": {
     "@iosevka/font-kits": "31.1.0",
