--- a/packages/font-otl/package.json
+++ b/packages/font-otl/package.json
@@ -3,7 +3,7 @@
   "version": "31.1.0",
   "private": true,
   "exports": {
-    ".": "./src/index.mjs"
+    ".": "./lib/index.mjs"
   },
   "dependencies": {
     "@iosevka/font-glyphs": "31.1.0",
