Add `diagonal-tailed-cursive` variants for `cyrl-ef`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7180,6 +7180,14 @@ descriptionAffix = "cursive bar"
 selectorAffix."cyrl/ef" = "cursive"
 selectorAffix."cyrl/ef.BGR" = "cursive"
 
+[prime.cyrl-ef.variants-buildup.stages.bar.diagonal-tailed-cursive]
+rank = 3
+nonBreakingVariantAdditionPriority = 100
+next = "END"
+descriptionAffix = "cursive bar, and diagonal tail"
+selectorAffix."cyrl/ef" = "diagonalTailedCursive"
+selectorAffix."cyrl/ef.BGR" = "diagonalTailedCursive"
+
 [prime.cyrl-ef.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
@@ -10351,7 +10359,7 @@ lower-tau = "diagonal-tailed"
 cyrl-a = "single-storey-tailed"
 cyrl-zhe = "cursive"
 cyrl-u = "cursive-serifless"
-cyrl-ef = "split-cursive"
+cyrl-ef = "split-diagonal-tailed-cursive"
 cyrl-yeri = "cursive"
 cyrl-yery = "cursive"
 ampersand = "closed"
@@ -10388,7 +10396,7 @@ x = "cursive"
 y = "cursive-motion-serifed"
 cyrl-ka = "symmetric-connected-top-left-and-bottom-right-serifed"
 cyrl-u = "cursive-motion-serifed"
-cyrl-ef = "split-cursive"
+cyrl-ef = "split-diagonal-tailed-cursive"
 micro-sign = "toothed-motion-serifed"
 
 
