--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1818,10 +1818,18 @@ selectorAffix.WHookTop = "straightAsymmetric"
 
 [prime.capital-w.variants-buildup.stages.body.straight-vertical-sides]
 rank = 6
-descriptionAffix = "body shape with vertical sides"
+descriptionAffix = "straight body shape with vertical sides"
 selectorAffix.W = "straightVerticalSides"
 selectorAffix."W/sansSerif" = "straightVerticalSides"
 selectorAffix.WHookTop = "straightVerticalSides"
+
+[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides]
+rank = 7
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "rounded body shape with vertical sides"
+selectorAffix.W = "roundedVerticalSides"
+selectorAffix."W/sansSerif" = "roundedVerticalSides"
+selectorAffix.WHookTop = "roundedVerticalSides"
 
 [prime.capital-w.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4620,13 +4628,22 @@ selectorAffix.wHookTop = "curly"
 [prime.w.variants-buildup.stages.body.straight-vertical-sides]
 rank = 3
 groupRank = 1
-descriptionAffix = "body shape with vertical sides"
+descriptionAffix = "straight body shape with vertical sides"
 selectorAffix.w = "straightVerticalSides"
 selectorAffix."w/sansSerif" = "straightVerticalSides"
 selectorAffix.wHookTop = "straightVerticalSides"
 
-[prime.w.variants-buildup.stages.body.straight-flat-top]
+[prime.w.variants-buildup.stages.body.rounded-vertical-sides]
 rank = 4
+groupRank = 1
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "rounded body shape with vertical sides"
+selectorAffix.w = "roundedVerticalSides"
+selectorAffix."w/sansSerif" = "roundedVerticalSides"
+selectorAffix.wHookTop = "roundedVerticalSides"
+
+[prime.w.variants-buildup.stages.body.straight-flat-top]
+rank = 5
 groupRank = 2
 descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
 selectorAffix.w = "straightFlatTop"
@@ -4634,7 +4651,7 @@ selectorAffix."w/sansSerif" = "straightFlatTop"
 selectorAffix.wHookTop = "straightFlatTop"
 
 [prime.w.variants-buildup.stages.body.straight-double-v]
-rank = 5
+rank = 6
 groupRank = 2
 descriptionAffix = "body shape like double V"
 selectorAffix.w = "straightDoubleV"
@@ -4642,7 +4659,7 @@ selectorAffix."w/sansSerif" = "straightDoubleV"
 selectorAffix.wHookTop = "straightDoubleV"
 
 [prime.w.variants-buildup.stages.body.straight-asymmetric]
-rank = 6
+rank = 7
 groupRank = 2
 descriptionAffix = "asymmetric shape"
 selectorAffix.w = "straightAsymmetric"
@@ -4650,7 +4667,7 @@ selectorAffix."w/sansSerif" = "straightAsymmetric"
 selectorAffix.wHookTop = "straightAsymmetric"
 
 [prime.w.variants-buildup.stages.body.cursive]
-rank = 7
+rank = 8
 groupRank = 3
 descriptionAffix = "cursive shape"
 selectorAffix.w = "cursive"
@@ -9808,6 +9825,7 @@ j = "flat-hook-serifed"
 k = "symmetric-connected-serifless"
 l = "hooky"
 t = "flat-hook"
+w = "rounded-vertical-sides-serifless"
 y = "cursive-flat-hook-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "sulzbacher-serifless"
@@ -9850,6 +9868,7 @@ g = "single-storey-flat-hook-serifed"
 i = "serifed"
 k = "symmetric-connected-serifed"
 l = "serifed"
+w = "rounded-vertical-sides-serifed"
 x = "straight-serifed"
 y = "cursive-flat-hook-serifed"
 z = "straight-serifed"
@@ -9867,6 +9886,7 @@ g = "single-storey-flat-hook-serifless"
 i = "serifed-flat-tailed"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
 l = "serifed-flat-tailed"
+w = "rounded-vertical-sides-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "cursive-flat-hook-motion-serifed"
 cyrl-ka = "symmetric-connected-top-left-and-bottom-right-serifed"
