--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,14 @@ dist
 release-archives
 
 # Generated files
+packages/*/lib
 packages/font-glyphs/src/**/*.mjs
 packages/font-otl/src/**/*.mjs
 
 # Private config files
 private.toml
 private-build-plans.toml
+params/private-parameters.toml
 
 # pages-source ignores
 .next
