Add round-top capital A (#2472).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -567,6 +567,13 @@ selectorAffix.A = "curly"
 selectorAffix."A/sansSerif" = "curly"
 selectorAffix.AE = "curly"
 
+[prime.capital-a.variants-buildup.stages.body.round-top]
+rank = 3
+descriptionAffix = "round top"
+selectorAffix.A = "roundTop"
+selectorAffix."A/sansSerif" = "roundTop"
+selectorAffix.AE = "curly"
+
 [prime.capital-a.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
@@ -578,6 +585,7 @@ selectorAffix.AE = ""
 [prime.capital-a.variants-buildup.stages.serifs.top-serifed]
 rank = 2
 descriptionAffix = "serifs at top"
+enableIf = [{ body = "NOT round-top" }]
 selectorAffix.A = "topSerifed"
 selectorAffix."A/sansSerif" = "serifless"
 selectorAffix.AE = ""
@@ -592,6 +600,7 @@ selectorAffix.AE = ""
 [prime.capital-a.variants-buildup.stages.serifs.tri-serifed]
 rank = 4
 descriptionAffix = "serifs at both top and base"
+enableIf = [{ body = "NOT round-top" }]
 selectorAffix.A = "triSerifed"
 selectorAffix."A/sansSerif" = "serifless"
 selectorAffix.AE = ""
@@ -9812,6 +9821,7 @@ tag = "ss10"
 description = "Envy Code R Style"
 
 [composite.ss10.design]
+capital-a = "round-top-serifless"
 capital-i = "serifed"
 capital-j = "serifless"
 capital-k = "symmetric-touching-serifless"
@@ -9852,6 +9862,7 @@ pilcrow = "low"
 micro-sign = "toothless-rounded-serifless"
 
 [composite.ss10.italic]
+capital-a = "straight-serifless"
 a = "single-storey-tailed"
 i = "serifed-flat-tailed"
 j = "serifed"
@@ -9860,6 +9871,7 @@ cyrl-a = "single-storey-tailed"
 cyrl-u = "cursive-flat-hook-serifless"
 
 [composite.ss10.slab-override.design]
+capital-a = "round-top-base-serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifed"
 capital-w = "straight-vertical-sides-serifed"
@@ -9882,6 +9894,7 @@ seven = "straight-serifed"
 micro-sign = "toothless-rounded-serifed"
 
 [composite.ss10.slab-override.italic]
+capital-a = "straight-base-serifed"
 g = "single-storey-flat-hook-serifless"
 i = "serifed-flat-tailed"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
