Use variants-buildup mechanism for dollar and cent variants

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8125,35 +8125,41 @@ selectorAffix.at = "tall"
 sampler = "$"
 tagKind = "symbol"
 
-[prime.dollar.variants.open]
+[prime.dollar.variants-buildup]
+entry = "height"
+descriptionLeader = "Dollar symbol (`$`)"
+
+[prime.dollar.variants-buildup.stages.height."*"]
+next = "shape"
+
+[prime.dollar.variants-buildup.stages.height.normal]
 rank = 1
-description = "Dollar symbol with open contour"
-selector.dollar = "open"
+keyAffix = ""
+descriptionAffix = "normal height"
+selectorAffix.dollar = ""
 
-[prime.dollar.variants.through]
+[prime.dollar.variants-buildup.stages.height.cap]
 rank = 2
-description = "Dollar symbol with strike-through vertical bar"
-selector.dollar = "through"
+descriptionAffix = "cap height"
+selectorAffix.dollar = "cap"
 
-[prime.dollar.variants.interrupted]
+[prime.dollar.variants-buildup.stages.shape."*"]
+mode = "prepend"
+
+[prime.dollar.variants-buildup.stages.shape.open]
+rank = 1
+descriptionAffix = "open contour"
+selectorAffix.dollar = "open"
+
+[prime.dollar.variants-buildup.stages.shape.through]
+rank = 2
+descriptionAffix = "strike-through vertical bar"
+selectorAffix.dollar = "through"
+
+[prime.dollar.variants-buildup.stages.shape.interrupted]
 rank = 3
-description = "Dollar symbol with interrupted strike-through vertical bar"
-selector.dollar = "interrupted"
-
-[prime.dollar.variants.open-cap]
-rank = 4
-description = "Dollar symbol with open contour, sized not exceeding baseline and ascender"
-selector.dollar = "openCap"
-
-[prime.dollar.variants.through-cap]
-rank = 5
-description = "Dollar symbol with strike-through vertical bar, sized not exceeding baseline and ascender"
-selector.dollar = "throughCap"
-
-[prime.dollar.variants.interrupted-cap]
-rank = 6
-description = "Dollar symbol with interrupted strike-through vertical bar, sized not exceeding baseline and ascender"
-selector.dollar = "interruptedCap"
+descriptionAffix = "interrupted strike-through vertical bar"
+selectorAffix.dollar = "interrupted"
 
 
 
@@ -8161,35 +8167,41 @@ selector.dollar = "interruptedCap"
 sampler = "¢"
 tagKind = "symbol"
 
-[prime.cent.variants.open]
+[prime.cent.variants-buildup]
+entry = "height"
+descriptionLeader = "Cent sign (`¢`)"
+
+[prime.cent.variants-buildup.stages.height."*"]
+next = "shape"
+
+[prime.cent.variants-buildup.stages.height.normal]
 rank = 1
-description = "Cent sign (`¢`) with open contour"
-selector.cent = "open"
+keyAffix = ""
+descriptionAffix = "normal height"
+selectorAffix.cent = ""
 
-[prime.cent.variants.through]
+[prime.cent.variants-buildup.stages.height.cap]
 rank = 2
-description = "Cent sign (`¢`) with vertical bar all through the `c` part"
-selector.cent = "through"
+descriptionAffix = "cap height"
+selectorAffix.cent = "cap"
 
-[prime.cent.variants.bar-interrupted]
+[prime.cent.variants-buildup.stages.shape."*"]
+mode = "prepend"
+
+[prime.cent.variants-buildup.stages.shape.open]
+rank = 1
+descriptionAffix = "open contour"
+selectorAffix.cent = "open"
+
+[prime.cent.variants-buildup.stages.shape.through]
+rank = 2
+descriptionAffix = "vertical bar all through the `c` part"
+selectorAffix.cent = "through"
+
+[prime.cent.variants-buildup.stages.shape.bar-interrupted]
 rank = 3
-description = "Cent sign (`¢`) with vertical bar breaks at center"
-selector.cent = "interrupted"
-
-[prime.cent.variants.open-cap]
-rank = 4
-description = "Cent sign (`¢`) with open contour, sized not exceeding baseline and ascender"
-selector.cent = "openCap"
-
-[prime.cent.variants.through-cap]
-rank = 5
-description = "Cent sign (`¢`) with vertical bar all through the `c` part, sized not exceeding baseline and ascender"
-selector.cent = "throughCap"
-
-[prime.cent.variants.bar-interrupted-cap]
-rank = 6
-description = "Cent sign (`¢`) with vertical bar breaks at center, sized not exceeding baseline and ascender"
-selector.cent = "interruptedCap"
+descriptionAffix = "vertical bar breaks at center"
+selectorAffix.cent = "interrupted"
 
 
 
