Add Dollar/cent with slanted stroke (#2408)

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7713,8 +7713,8 @@ selector.punctuationDot = "square"
 
 
 [prime.braille-dot]
-sampler = "⠭⠽ "
-hotChars = "⠭⠽"
+sampler = "⣝⣑ "
+hotChars = "⣝⣑"
 samplerExplain = "Dot shape in braille"
 tagKind = "dot"
 
@@ -8144,6 +8144,7 @@ descriptionAffix = "cap height"
 selectorAffix.dollar = "cap"
 
 [prime.dollar.variants-buildup.stages.shape."*"]
+next = "bar-slope"
 mode = "prepend"
 
 [prime.dollar.variants-buildup.stages.shape.open]
@@ -8161,6 +8162,20 @@ rank = 3
 descriptionAffix = "interrupted strike-through vertical bar"
 selectorAffix.dollar = "interrupted"
 
+[prime.dollar.variants-buildup.stages.bar-slope."*"]
+mode = "prepend"
+
+[prime.dollar.variants-buildup.stages.bar-slope.vertical]
+rank = 1
+keyAffix = ""
+descriptionAffix = "vertical bar"
+selectorAffix.dollar = ""
+
+[prime.dollar.variants-buildup.stages.bar-slope.slanted]
+rank = 2
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "slanted bar"
+selectorAffix.dollar = "slanted"
 
 
 [prime.cent]
@@ -8187,6 +8202,7 @@ selectorAffix.cent = "cap"
 
 [prime.cent.variants-buildup.stages.shape."*"]
 mode = "prepend"
+next = "bar-slope"
 
 [prime.cent.variants-buildup.stages.shape.open]
 rank = 1
@@ -8202,6 +8218,21 @@ selectorAffix.cent = "through"
 rank = 3
 descriptionAffix = "vertical bar breaks at center"
 selectorAffix.cent = "interrupted"
+
+[prime.cent.variants-buildup.stages.bar-slope."*"]
+mode = "prepend"
+
+[prime.cent.variants-buildup.stages.bar-slope.vertical]
+rank = 1
+keyAffix = ""
+descriptionAffix = "vertical bar"
+selectorAffix.cent = ""
+
+[prime.cent.variants-buildup.stages.bar-slope.slanted]
+rank = 2
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "slanted bar"
+selectorAffix.cent = "slanted"
 
 
 
@@ -9109,7 +9140,8 @@ brace = "straight"
 guillemet = "straight"
 number-sign = "slanted"
 at = "fourfold"
-cent = "through-cap"
+dollar = "slanted-through"
+cent = "slanted-through-cap"
 percent = "rings-continuous-slash"
 question = "corner-flat-hooked"
 micro-sign = "tailed-serifless"
@@ -9869,6 +9901,7 @@ underscore = "low"
 guillemet = "straight"
 at = "threefold"
 dollar = "through-cap"
+cent = "slanted-through"
 percent = "rings-continuous-slash"
 pilcrow = "low"
 micro-sign = "toothless-rounded-serifless"
