Add dollar/cent with slanted stroke. (#2408) (#2474)
* Use variants-buildup mechanism for dollar and cent variants

* Add Dollar/cent with slanted stroke (#2408)

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7713,8 +7713,8 @@ selector.punctuationDot = "square"
 
 
 [prime.braille-dot]
-sampler = "⠭⠽ "
-hotChars = "⠭⠽"
+sampler = "⣝⣑ "
+hotChars = "⣝⣑"
 samplerExplain = "Dot shape in braille"
 tagKind = "dot"
 
@@ -8125,71 +8125,114 @@ selectorAffix.at = "tall"
 sampler = "$"
 tagKind = "symbol"
 
-[prime.dollar.variants.open]
+[prime.dollar.variants-buildup]
+entry = "height"
+descriptionLeader = "Dollar symbol (`$`)"
+
+[prime.dollar.variants-buildup.stages.height."*"]
+next = "shape"
+
+[prime.dollar.variants-buildup.stages.height.normal]
 rank = 1
-description = "Dollar symbol with open contour"
-selector.dollar = "open"
+keyAffix = ""
+descriptionAffix = "normal height"
+selectorAffix.dollar = ""
 
-[prime.dollar.variants.through]
+[prime.dollar.variants-buildup.stages.height.cap]
 rank = 2
-description = "Dollar symbol with strike-through vertical bar"
-selector.dollar = "through"
+descriptionAffix = "cap height"
+selectorAffix.dollar = "cap"
 
-[prime.dollar.variants.interrupted]
+[prime.dollar.variants-buildup.stages.shape."*"]
+next = "bar-slope"
+mode = "prepend"
+
+[prime.dollar.variants-buildup.stages.shape.open]
+rank = 1
+descriptionAffix = "open contour"
+selectorAffix.dollar = "open"
+
+[prime.dollar.variants-buildup.stages.shape.through]
+rank = 2
+descriptionAffix = "strike-through vertical bar"
+selectorAffix.dollar = "through"
+
+[prime.dollar.variants-buildup.stages.shape.interrupted]
 rank = 3
-description = "Dollar symbol with interrupted strike-through vertical bar"
-selector.dollar = "interrupted"
+descriptionAffix = "interrupted strike-through vertical bar"
+selectorAffix.dollar = "interrupted"
 
-[prime.dollar.variants.open-cap]
-rank = 4
-description = "Dollar symbol with open contour, sized not exceeding baseline and ascender"
-selector.dollar = "openCap"
+[prime.dollar.variants-buildup.stages.bar-slope."*"]
+mode = "prepend"
 
-[prime.dollar.variants.through-cap]
-rank = 5
-description = "Dollar symbol with strike-through vertical bar, sized not exceeding baseline and ascender"
-selector.dollar = "throughCap"
+[prime.dollar.variants-buildup.stages.bar-slope.vertical]
+rank = 1
+keyAffix = ""
+descriptionAffix = "vertical bar"
+selectorAffix.dollar = ""
 
-[prime.dollar.variants.interrupted-cap]
-rank = 6
-description = "Dollar symbol with interrupted strike-through vertical bar, sized not exceeding baseline and ascender"
-selector.dollar = "interruptedCap"
-
+[prime.dollar.variants-buildup.stages.bar-slope.slanted]
+rank = 2
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "slanted bar"
+selectorAffix.dollar = "slanted"
 
 
 [prime.cent]
 sampler = "¢"
 tagKind = "symbol"
 
-[prime.cent.variants.open]
+[prime.cent.variants-buildup]
+entry = "height"
+descriptionLeader = "Cent sign (`¢`)"
+
+[prime.cent.variants-buildup.stages.height."*"]
+next = "shape"
+
+[prime.cent.variants-buildup.stages.height.normal]
 rank = 1
-description = "Cent sign (`¢`) with open contour"
-selector.cent = "open"
+keyAffix = ""
+descriptionAffix = "normal height"
+selectorAffix.cent = ""
 
-[prime.cent.variants.through]
+[prime.cent.variants-buildup.stages.height.cap]
 rank = 2
-description = "Cent sign (`¢`) with vertical bar all through the `c` part"
-selector.cent = "through"
+descriptionAffix = "cap height"
+selectorAffix.cent = "cap"
 
-[prime.cent.variants.bar-interrupted]
+[prime.cent.variants-buildup.stages.shape."*"]
+mode = "prepend"
+next = "bar-slope"
+
+[prime.cent.variants-buildup.stages.shape.open]
+rank = 1
+descriptionAffix = "open contour"
+selectorAffix.cent = "open"
+
+[prime.cent.variants-buildup.stages.shape.through]
+rank = 2
+descriptionAffix = "vertical bar all through the `c` part"
+selectorAffix.cent = "through"
+
+[prime.cent.variants-buildup.stages.shape.bar-interrupted]
 rank = 3
-description = "Cent sign (`¢`) with vertical bar breaks at center"
-selector.cent = "interrupted"
+descriptionAffix = "vertical bar breaks at center"
+selectorAffix.cent = "interrupted"
 
-[prime.cent.variants.open-cap]
-rank = 4
-description = "Cent sign (`¢`) with open contour, sized not exceeding baseline and ascender"
-selector.cent = "openCap"
+[prime.cent.variants-buildup.stages.bar-slope."*"]
+mode = "prepend"
 
-[prime.cent.variants.through-cap]
-rank = 5
-description = "Cent sign (`¢`) with vertical bar all through the `c` part, sized not exceeding baseline and ascender"
-selector.cent = "throughCap"
+[prime.cent.variants-buildup.stages.bar-slope.vertical]
+rank = 1
+keyAffix = ""
+descriptionAffix = "vertical bar"
+selectorAffix.cent = ""
 
-[prime.cent.variants.bar-interrupted-cap]
-rank = 6
-description = "Cent sign (`¢`) with vertical bar breaks at center, sized not exceeding baseline and ascender"
-selector.cent = "interruptedCap"
+[prime.cent.variants-buildup.stages.bar-slope.slanted]
+rank = 2
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "slanted bar"
+selectorAffix.cent = "slanted"
 
 
 
@@ -9097,7 +9140,8 @@ brace = "straight"
 guillemet = "straight"
 number-sign = "slanted"
 at = "fourfold"
-cent = "through-cap"
+dollar = "slanted-through"
+cent = "slanted-through-cap"
 percent = "rings-continuous-slash"
 question = "corner-flat-hooked"
 micro-sign = "tailed-serifless"
@@ -9857,6 +9901,7 @@ underscore = "low"
 guillemet = "straight"
 at = "threefold"
 dollar = "through-cap"
+cent = "slanted-through"
 percent = "rings-continuous-slash"
 pilcrow = "low"
 micro-sign = "toothless-rounded-serifless"
