Bring back eslint-plugin-import

--- a/packages/font-kits/package.json
+++ b/packages/font-kits/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@iosevka/geometry": "31.8.0",
     "@iosevka/glyph": "31.8.0",
-    "@iosevka/util": "31.8.0"
+    "@iosevka/util": "31.8.0",
+    "typo-geom": "^0.16.1"
   }
 }
