--- a/packages/font/package.json
+++ b/packages/font/package.json
@@ -19,6 +19,7 @@
     "@iosevka/util": "31.8.0",
     "harfbuzzjs": "^0.4.0",
     "ot-builder": "^1.7.4",
-    "semver": "^7.6.3"
+    "semver": "^7.6.3",
+    "@msgpack/msgpack": "^2.8.0"
   }
 }
