--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@iosevka/monorepo",
   "version": "31.8.0",
-  "workspaces": [
-    "packages/*",
-    "tools/*"
-  ],
+  "workspaces": ["packages/*", "tools/*"],
   "scripts": {
     "build": "verda -f verdafile.mjs",
     "bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && node tools/misc/src/generate-ttfa-ranges.mjs",
@@ -26,6 +23,7 @@
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-import": "^2.31.0",
     "glob": "^11.0.0",
     "patel": "^0.40.0",
     "prettier": "^3.3.3"
