--- a/tools/amend-readme/package.json
+++ b/tools/amend-readme/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "@iosevka/param": "31.8.0",
-    "@unicode/unicode-16.0.0": "^1.6.0"
+    "@unicode/unicode-16.0.0": "^1.6.0",
+    "semver": "^7.6.3"
   }
 }
