--- a/tools/data-export/package.json
+++ b/tools/data-export/package.json
@@ -12,6 +12,7 @@
     "@iarna/toml": "^2.2.5",
     "@iosevka/param": "31.8.0",
     "@unicode/unicode-16.0.0": "^1.6.0",
-    "cldr": "^7.5.0"
+    "cldr": "^7.5.0",
+    "@msgpack/msgpack": "^2.8.0"
   }
 }
