--- a/tools/misc/package.json
+++ b/tools/misc/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "semver": "^7.6.3",
     "wawoff2": "^2.0.1",
-    "@iosevka/util": "31.8.0"
+    "@iosevka/util": "31.8.0",
+    "@unicode/unicode-16.0.0": "^1.6.0"
   }
 }
