--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "@iosevka/website",
-  "private": true,
-  "version": "31.8.0",
-  "scripts": {
-    "dev": "next",
-    "start": "next start",
-    "build": "next build"
-  },
-  "dependencies": {
-    "@iarna/toml": "^2.2.5",
-    "change-case": "^5.4.3",
-    "immer": "^10.0.4",
-    "next": "^14.1.3",
-    "react": "^18.2.0",
-    "react-countup": "^6.5.0",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.8.1",
-    "react-use": "^17.5.0",
-    "sass": "^1.72.0",
-    "use-onclickoutside": "^0.4.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.27",
-    "@types/react": "^18.2.65",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
-  }
+    "name": "@iosevka/website",
+    "private": true,
+    "version": "31.8.0",
+    "scripts": {
+        "dev": "next",
+        "start": "next start",
+        "build": "next build",
+        "lint": "eslint",
+        "lint:fix": "eslint --fix"
+    },
+    "dependencies": {
+        "@iarna/toml": "^2.2.5",
+        "change-case": "^5.4.4",
+        "immer": "^10.1.1",
+        "next": "^14.2.15",
+        "react": "^18.3.1",
+        "react-countup": "^6.5.3",
+        "react-dom": "^18.3.1",
+        "react-intersection-observer": "^9.13.1",
+        "react-use": "^17.5.1",
+        "sass": "^1.79.5",
+        "use-onclickoutside": "^0.4.1"
+    },
+    "devDependencies": {
+        "@types/node": "^22.7.5",
+        "@types/react": "^18.3.11",
+        "eslint": "^9.12.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "prettier": "^3.3.3",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.8.1"
+    }
 }
