Optimize auto-serif behavior of four characters.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -967,8 +967,6 @@ selector."H/sansSerif" = "serifless"
 selector."H/descBase" = "serifless"
 selector.leftHalfH = "serifless"
 selector.rightHalfH = "serifless"
-selector."grek/Heta" = "serifless"
-selector."grek/heta" = "serifless"
 selector.Hwair = "serifless"
 selector.HHookTop = "serifless"
 
@@ -980,8 +978,6 @@ selector."H/sansSerif" = "serifless"
 selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "serifless"
-selector."grek/Heta" = "topLeftSerifed"
-selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "topLeftSerifed"
 selector.HHookTop = "serifless"
 
@@ -993,8 +989,6 @@ selector."H/sansSerif" = "serifless"
 selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "topLeftBottomRightSerifed"
-selector."grek/Heta" = "topLeftSerifed"
-selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "topLeftSerifed"
 selector.HHookTop = "topLeftBottomRightSerifed"
 
@@ -1006,8 +1000,6 @@ selector."H/sansSerif" = "serifless"
 selector."H/descBase" = "serifed"
 selector.leftHalfH = "serifed"
 selector.rightHalfH = "serifed"
-selector."grek/Heta" = "serifed"
-selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "serifedExceptBottomRight"
 selector.HHookTop = "serifed"
 
@@ -2145,8 +2137,9 @@ selectorAffix."ae/a" = "doubleStorey"
 selectorAffix."a/sansSerif" = "doubleStorey"
 selectorAffix."a/rtailBase" = "doubleStorey"
 selectorAffix."a/turnABase" = "doubleStorey"
-selectorAffix."a/single"    = "singleStorey"
-selectorAffix.scripta       = "singleStorey"
+selectorAffix."a/single/autoSerifed/slab" = "singleStorey"
+selectorAffix."a/single/autoSerifed/sans" = "singleStorey"
+selectorAffix.scripta = "singleStorey"
 
 [prime.a.variants-buildup.stages.storey.single-storey]
 rank = 2
@@ -2157,8 +2150,9 @@ selectorAffix."ae/a" = "doubleStorey"
 selectorAffix."a/sansSerif" = "singleStorey"
 selectorAffix."a/rtailBase" = "singleStorey"
 selectorAffix."a/turnABase" = "doubleStorey"
-selectorAffix."a/single"    = "singleStorey"
-selectorAffix.scripta       = "singleStorey"
+selectorAffix."a/single/autoSerifed/slab" = "singleStorey"
+selectorAffix."a/single/autoSerifed/sans" = "singleStorey"
+selectorAffix.scripta = "singleStorey"
 
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
 next = "bar"
@@ -2172,8 +2166,9 @@ selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
 selectorAffix."a/rtailBase" = ""
 selectorAffix."a/turnABase" = ""
-selectorAffix."a/single"    = ""
-selectorAffix.scripta       = ""
+selectorAffix."a/single/autoSerifed/slab" = ""
+selectorAffix."a/single/autoSerifed/sans" = ""
+selectorAffix.scripta = ""
 
 [prime.a.variants-buildup.stages.double-storey-hook.hook-serifed]
 rank = 2
@@ -2184,8 +2179,9 @@ selectorAffix."ae/a" = "hookInwardSerifed"
 selectorAffix."a/sansSerif" = ""
 selectorAffix."a/rtailBase" = "hookInwardSerifed"
 selectorAffix."a/turnABase" = "hookInwardSerifed"
-selectorAffix."a/single"    = ""
-selectorAffix.scripta       = ""
+selectorAffix."a/single/autoSerifed/slab" = ""
+selectorAffix."a/single/autoSerifed/sans" = ""
+selectorAffix.scripta = ""
 
 [prime.a.variants-buildup.stages.ear."*"]
 next = "bar"
@@ -2198,8 +2194,9 @@ selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
 selectorAffix."a/rtailBase" = ""
 selectorAffix."a/turnABase" = ""
-selectorAffix."a/single"    = ""
-selectorAffix.scripta       = ""
+selectorAffix."a/single/autoSerifed/slab" = ""
+selectorAffix."a/single/autoSerifed/sans" = ""
+selectorAffix.scripta = ""
 
 [prime.a.variants-buildup.stages.ear.earless-corner]
 rank = 2
@@ -2209,8 +2206,9 @@ selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "earlessCorner"
 selectorAffix."a/rtailBase" = "earlessCorner"
 selectorAffix."a/turnABase" = ""
-selectorAffix."a/single"    = "earlessCorner"
-selectorAffix.scripta       = ""
+selectorAffix."a/single/autoSerifed/slab" = "earlessCorner"
+selectorAffix."a/single/autoSerifed/sans" = "earlessCorner"
+selectorAffix.scripta = ""
 
 [prime.a.variants-buildup.stages.ear.earless-rounded]
 rank = 3
@@ -2220,8 +2218,9 @@ selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "earlessRounded"
 selectorAffix."a/rtailBase" = "earlessRounded"
 selectorAffix."a/turnABase" = ""
-selectorAffix."a/single"    = "earlessRounded"
-selectorAffix.scripta       = ""
+selectorAffix."a/single/autoSerifed/slab" = "earlessRounded"
+selectorAffix."a/single/autoSerifed/sans" = "earlessRounded"
+selectorAffix.scripta = ""
 
 [prime.a.variants-buildup.stages.bar.serifless]
 rank = 1
@@ -2232,8 +2231,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifless"
-selectorAffix."a/single"    = "serifless"
-selectorAffix.scripta       = "serifless"
+selectorAffix."a/single/autoSerifed/slab" = "serifless"
+selectorAffix."a/single/autoSerifed/sans" = "serifless"
+selectorAffix.scripta = "serifless"
 
 [prime.a.variants-buildup.stages.bar.serifed]
 rank = 2
@@ -2243,8 +2243,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifed"
-selectorAffix."a/single"    = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
-selectorAffix.scripta       = "serifed"
+selectorAffix."a/single/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
+selectorAffix."a/single/autoSerifed/sans" = "serifed"
+selectorAffix.scripta = "serifed"
 
 [prime.a.variants-buildup.stages.bar.double-serifed]
 rank = 3
@@ -2255,8 +2256,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "topSerifed"
 selectorAffix."a/turnABase" = "serifed"
-selectorAffix."a/single"    = "doubleSerifed"
-selectorAffix.scripta       = "serifed"
+selectorAffix."a/single/autoSerifed/slab" = "doubleSerifed"
+selectorAffix."a/single/autoSerifed/sans" = "doubleSerifed"
+selectorAffix.scripta = "serifed"
 
 [prime.a.variants-buildup.stages.bar.tailed]
 rank = 4
@@ -2266,8 +2268,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "tailed"
-selectorAffix."a/single"    = "tailed"
-selectorAffix.scripta       = "tailed"
+selectorAffix."a/single/autoSerifed/slab" = "tailed"
+selectorAffix."a/single/autoSerifed/sans" = "tailed"
+selectorAffix.scripta = "tailed"
 
 [prime.a.variants-buildup.stages.bar.tailed-serifed]
 rank = 5
@@ -2278,8 +2281,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."a/rtailBase" = "topSerifed"
 selectorAffix."a/turnABase" = "tailed"
-selectorAffix."a/single"    = "tailedSerifed"
-selectorAffix.scripta       = "tailed"
+selectorAffix."a/single/autoSerifed/slab" = "tailedSerifed"
+selectorAffix."a/single/autoSerifed/sans" = "tailedSerifed"
+selectorAffix.scripta = "tailed"
 
 [prime.a.variants-buildup.stages.bar.toothless-corner]
 rank = 6
@@ -2290,8 +2294,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessCorner"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessCorner"
-selectorAffix."a/single"    = "serifless"
-selectorAffix.scripta       = "serifless"
+selectorAffix."a/single/autoSerifed/slab" = "serifless"
+selectorAffix."a/single/autoSerifed/sans" = "serifless"
+selectorAffix.scripta = "serifless"
 
 [prime.a.variants-buildup.stages.bar.toothless-rounded]
 rank = 7
@@ -2302,8 +2307,9 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessRounded"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessRounded"
-selectorAffix."a/single"    = "serifless"
-selectorAffix.scripta       = "serifless"
+selectorAffix."a/single/autoSerifed/slab" = "serifless"
+selectorAffix."a/single/autoSerifed/sans" = "serifless"
+selectorAffix.scripta = "serifless"
 
 
 
@@ -2748,7 +2754,8 @@ selectorAffix."g/sansSerif" = ""
 selectorAffix."g/hookTopBase" = ""
 selectorAffix."gScript" = ""
 selectorAffix."gScriptCrossedTail" = ""
-selectorAffix."g/single" = ""
+selectorAffix."g/single/autoSerifed/slab" = ""
+selectorAffix."g/single/autoSerifed/sans" = ""
 
 [prime.g.variants-buildup.stages.openness."*"]
 next = "END"
@@ -2761,7 +2768,8 @@ selectorAffix."g/sansSerif" = "doubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScript" = "singleStoreyScriptCut"
 selectorAffix."gScriptCrossedTail" = "singleStoreyScriptCut"
-selectorAffix."g/single" = "singleStorey"
+selectorAffix."g/single/autoSerifed/slab" = "singleStoreySerifed"
+selectorAffix."g/single/autoSerifed/sans" = "singleStoreySerifless"
 
 [prime.g.variants-buildup.stages.openness.open]
 rank = 1
@@ -2771,7 +2779,8 @@ selectorAffix."g/sansSerif" = "openDoubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScript" = "singleStoreyScriptCut"
 selectorAffix."gScriptCrossedTail" = "singleStoreyScriptCut"
-selectorAffix."g/single" = "singleStorey"
+selectorAffix."g/single/autoSerifed/slab" = "singleStoreySerifed"
+selectorAffix."g/single/autoSerifed/sans" = "singleStoreySerifless"
 
 [prime.g.variants-buildup.stages.storey.single-storey]
 next = "hook"
@@ -2782,7 +2791,8 @@ selectorAffix."g/sansSerif" = "singleStorey"
 selectorAffix."g/hookTopBase" = "singleStorey"
 selectorAffix."gScript" = "singleStorey"
 selectorAffix."gScriptCrossedTail" = "singleStorey"
-selectorAffix."g/single" = "singleStorey"
+selectorAffix."g/single/autoSerifed/slab" = "singleStorey"
+selectorAffix."g/single/autoSerifed/sans" = "singleStorey"
 
 [prime.g.variants-buildup.stages.hook."*"]
 next = "ear"
@@ -2795,7 +2805,8 @@ selectorAffix."g/sansSerif" = ""
 selectorAffix."g/hookTopBase" = ""
 selectorAffix."gScript" = ""
 selectorAffix."gScriptCrossedTail" = ""
-selectorAffix."g/single" = ""
+selectorAffix."g/single/autoSerifed/slab" = ""
+selectorAffix."g/single/autoSerifed/sans" = ""
 
 [prime.g.variants-buildup.stages.hook.flat-hook]
 rank = 2
@@ -2805,7 +2816,8 @@ selectorAffix."g/sansSerif" = "flatHook"
 selectorAffix."g/hookTopBase" = "flatHook"
 selectorAffix."gScript" = "flatHook"
 selectorAffix."gScriptCrossedTail" = ""
-selectorAffix."g/single" = "flatHook"
+selectorAffix."g/single/autoSerifed/slab" = "flatHook"
+selectorAffix."g/single/autoSerifed/sans" = "flatHook"
 
 [prime.g.variants-buildup.stages.ear.serifless]
 rank = 1
@@ -2814,7 +2826,8 @@ selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
-selectorAffix."g/single" = "serifless"
+selectorAffix."g/single/autoSerifed/slab" = "serifless"
+selectorAffix."g/single/autoSerifed/sans" = "serifless"
 
 [prime.g.variants-buildup.stages.ear.serifed]
 rank = 2
@@ -2824,7 +2837,8 @@ selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
-selectorAffix."g/single" = "serifed"
+selectorAffix."g/single/autoSerifed/slab" = "serifed"
+selectorAffix."g/single/autoSerifed/sans" = "serifed"
 
 [prime.g.variants-buildup.stages.ear.earless-corner]
 rank = 3
@@ -2834,7 +2848,8 @@ selectorAffix."g/sansSerif" = "earlessCorner"
 selectorAffix."g/hookTopBase" = "earlessCornerHTB"
 selectorAffix."gScript" = "scriptCut"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
-selectorAffix."g/single" = "earlessCorner"
+selectorAffix."g/single/autoSerifed/slab" = "earlessCorner"
+selectorAffix."g/single/autoSerifed/sans" = "earlessCorner"
 
 [prime.g.variants-buildup.stages.ear.earless-rounded]
 rank = 4
@@ -2844,7 +2859,8 @@ selectorAffix."g/sansSerif" = "earlessRounded"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
-selectorAffix."g/single" = "earlessRounded"
+selectorAffix."g/single/autoSerifed/slab" = "earlessRounded"
+selectorAffix."g/single/autoSerifed/sans" = "earlessRounded"
 
 
 
@@ -5538,8 +5554,6 @@ rank = 1
 description = "Greek capital Gamma (`Γ`) without serifs"
 selector."grek/Gamma" = "serifless"
 selector."grek/Gamma/sansSerif" = "serifless"
-selector."grek/Digamma" = "serifless"
-selector."grek/digamma" = "serifless"
 selector."cyrl/Ghe" = "serifless"
 selector."cyrl/ghe.upright" = "serifless"
 selector."cyrl/Ge" = "serifless"
@@ -5552,8 +5566,6 @@ rank = 2
 description = "Greek capital Gamma (`Γ`) with serifs at top right"
 selector."grek/Gamma" = "topRightSerifed"
 selector."grek/Gamma/sansSerif" = "serifless"
-selector."grek/Digamma" = "topRightSerifed"
-selector."grek/digamma" = "topRightSerifed"
 selector."cyrl/Ghe" = "topRightSerifed"
 selector."cyrl/ghe.upright" = "topRightSerifed"
 selector."cyrl/Ge" = "serifless"
@@ -5566,8 +5578,6 @@ rank = 3
 description = "Greek capital Gamma (`Γ`) with bottom serif"
 selector."grek/Gamma" = "bottomSerifed"
 selector."grek/Gamma/sansSerif" = "serifless"
-selector."grek/Digamma" = "bottomSerifed"
-selector."grek/digamma" = "serifless"
 selector."cyrl/Ghe" = "bottomSerifed"
 selector."cyrl/ghe.upright" = "serifless"
 selector."cyrl/Ge" = "bottomSerifed"
@@ -5580,8 +5590,6 @@ rank = 4
 description = "Greek capital Gamma (`Γ`) with motion serifs at top and bottom"
 selector."grek/Gamma" = "serifed"
 selector."grek/Gamma/sansSerif" = "serifless"
-selector."grek/Digamma" = "serifed"
-selector."grek/digamma" = "topRightSerifed"
 selector."cyrl/Ghe" = "serifed"
 selector."cyrl/ghe.upright" = "serifed"
 selector."cyrl/Ge" = "serifed"
