--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2139,7 +2139,8 @@ selectorAffix."a/rtailBase" = "doubleStorey"
 selectorAffix."a/turnABase" = "doubleStorey"
 selectorAffix."a/single/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/single/autoSerifed/sans" = "singleStorey"
-selectorAffix.scripta = "singleStorey"
+selectorAffix."scripta/autoSerifed/slab" = "singleStorey"
+selectorAffix."scripta/autoSerifed/sans" = "singleStorey"
 
 [prime.a.variants-buildup.stages.storey.single-storey]
 rank = 2
@@ -2152,7 +2153,8 @@ selectorAffix."a/rtailBase" = "singleStorey"
 selectorAffix."a/turnABase" = "doubleStorey"
 selectorAffix."a/single/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/single/autoSerifed/sans" = "singleStorey"
-selectorAffix.scripta = "singleStorey"
+selectorAffix."scripta/autoSerifed/slab" = "singleStorey"
+selectorAffix."scripta/autoSerifed/sans" = "singleStorey"
 
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
 next = "bar"
@@ -2168,7 +2170,8 @@ selectorAffix."a/rtailBase" = ""
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/single/autoSerifed/slab" = ""
 selectorAffix."a/single/autoSerifed/sans" = ""
-selectorAffix.scripta = ""
+selectorAffix."scripta/autoSerifed/slab" = ""
+selectorAffix."scripta/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.double-storey-hook.hook-serifed]
 rank = 2
@@ -2181,7 +2184,8 @@ selectorAffix."a/rtailBase" = "hookInwardSerifed"
 selectorAffix."a/turnABase" = "hookInwardSerifed"
 selectorAffix."a/single/autoSerifed/slab" = ""
 selectorAffix."a/single/autoSerifed/sans" = ""
-selectorAffix.scripta = ""
+selectorAffix."scripta/autoSerifed/slab" = ""
+selectorAffix."scripta/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear."*"]
 next = "bar"
@@ -2196,7 +2200,8 @@ selectorAffix."a/rtailBase" = ""
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/single/autoSerifed/slab" = ""
 selectorAffix."a/single/autoSerifed/sans" = ""
-selectorAffix.scripta = ""
+selectorAffix."scripta/autoSerifed/slab" = ""
+selectorAffix."scripta/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear.earless-corner]
 rank = 2
@@ -2208,7 +2213,8 @@ selectorAffix."a/rtailBase" = "earlessCorner"
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/single/autoSerifed/slab" = "earlessCorner"
 selectorAffix."a/single/autoSerifed/sans" = "earlessCorner"
-selectorAffix.scripta = ""
+selectorAffix."scripta/autoSerifed/slab" = ""
+selectorAffix."scripta/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear.earless-rounded]
 rank = 3
@@ -2220,7 +2226,8 @@ selectorAffix."a/rtailBase" = "earlessRounded"
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/single/autoSerifed/slab" = "earlessRounded"
 selectorAffix."a/single/autoSerifed/sans" = "earlessRounded"
-selectorAffix.scripta = ""
+selectorAffix."scripta/autoSerifed/slab" = ""
+selectorAffix."scripta/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.bar.serifless]
 rank = 1
@@ -2233,7 +2240,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifless"
 selectorAffix."a/single/autoSerifed/slab" = "serifless"
 selectorAffix."a/single/autoSerifed/sans" = "serifless"
-selectorAffix.scripta = "serifless"
+selectorAffix."scripta/autoSerifed/slab" = "serifless"
+selectorAffix."scripta/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.serifed]
 rank = 2
@@ -2245,7 +2253,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifed"
 selectorAffix."a/single/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
 selectorAffix."a/single/autoSerifed/sans" = "serifed"
-selectorAffix.scripta = "serifed"
+selectorAffix."scripta/autoSerifed/slab" = "serifed"
+selectorAffix."scripta/autoSerifed/sans" = "serifed"
 
 [prime.a.variants-buildup.stages.bar.double-serifed]
 rank = 3
@@ -2258,7 +2267,8 @@ selectorAffix."a/rtailBase" = "topSerifed"
 selectorAffix."a/turnABase" = "serifed"
 selectorAffix."a/single/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/single/autoSerifed/sans" = "doubleSerifed"
-selectorAffix.scripta = "serifed"
+selectorAffix."scripta/autoSerifed/slab" = "serifed"
+selectorAffix."scripta/autoSerifed/sans" = "serifed"
 
 [prime.a.variants-buildup.stages.bar.tailed]
 rank = 4
@@ -2268,9 +2278,10 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "tailed"
-selectorAffix."a/single/autoSerifed/slab" = "tailed"
+selectorAffix."a/single/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "tailedSerifed", else = "tailed" }
 selectorAffix."a/single/autoSerifed/sans" = "tailed"
-selectorAffix.scripta = "tailed"
+selectorAffix."scripta/autoSerifed/slab" = "tailed"
+selectorAffix."scripta/autoSerifed/sans" = "tailed"
 
 [prime.a.variants-buildup.stages.bar.tailed-serifed]
 rank = 5
@@ -2283,7 +2294,8 @@ selectorAffix."a/rtailBase" = "topSerifed"
 selectorAffix."a/turnABase" = "tailed"
 selectorAffix."a/single/autoSerifed/slab" = "tailedSerifed"
 selectorAffix."a/single/autoSerifed/sans" = "tailedSerifed"
-selectorAffix.scripta = "tailed"
+selectorAffix."scripta/autoSerifed/slab" = "tailed"
+selectorAffix."scripta/autoSerifed/sans" = "tailed"
 
 [prime.a.variants-buildup.stages.bar.toothless-corner]
 rank = 6
@@ -2294,9 +2306,10 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessCorner"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessCorner"
-selectorAffix."a/single/autoSerifed/slab" = "serifless"
+selectorAffix."a/single/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/single/autoSerifed/sans" = "serifless"
-selectorAffix.scripta = "serifless"
+selectorAffix."scripta/autoSerifed/slab" = "serifed"
+selectorAffix."scripta/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.toothless-rounded]
 rank = 7
@@ -2307,9 +2320,10 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessRounded"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessRounded"
-selectorAffix."a/single/autoSerifed/slab" = "serifless"
+selectorAffix."a/single/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/single/autoSerifed/sans" = "serifless"
-selectorAffix.scripta = "serifless"
+selectorAffix."scripta/autoSerifed/slab" = "serifed"
+selectorAffix."scripta/autoSerifed/sans" = "serifless"
 
 
 
