changelog fix, lower-q-group fix

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3953,7 +3953,7 @@ keyAffix = ""
 selectorAffix.q = ""
 selectorAffix."q/sansSerif" = ""
 selectorAffix."q/hookTopBase" = ""
-selectorAffix.qRTail = ""
+selectorAffix."q/tailless" = ""
 selectorAffix.gha = ""
 
 [prime.q.variants-buildup.stages.body.earless-corner]
@@ -3962,7 +3962,7 @@ descriptionAffix = "earless (cornered) shape"
 selectorAffix.q = "earlessCorner"
 selectorAffix."q/sansSerif" = "earlessCorner"
 selectorAffix."q/hookTopBase" = "earlessCorner"
-selectorAffix.qRTail = "earlessCorner"
+selectorAffix."q/tailless" = "earlessCorner"
 selectorAffix.gha = ""
 
 [prime.q.variants-buildup.stages.body.earless-rounded]
@@ -3971,7 +3971,7 @@ descriptionAffix = "earless (rounded) shape"
 selectorAffix.q = "earlessRounded"
 selectorAffix."q/sansSerif" = "earlessRounded"
 selectorAffix."q/hookTopBase" = ""
-selectorAffix.qRTail = "earlessRounded"
+selectorAffix."q/tailless" = "earlessRounded"
 selectorAffix.gha = ""
 
 [prime.q.variants-buildup.stages.terminal."*"]
@@ -3983,7 +3983,7 @@ descriptionAffix = "straight terminal"
 selectorAffix.q = "straight"
 selectorAffix."q/sansSerif" = "straight"
 selectorAffix."q/hookTopBase" = "straight"
-selectorAffix.qRTail = "straight"
+selectorAffix."q/tailless" = "straight"
 selectorAffix.gha = "straight"
 
 [prime.q.variants-buildup.stages.terminal.tailed]
@@ -3992,7 +3992,7 @@ descriptionAffix = "tailed terminal"
 selectorAffix.q = "tailed"
 selectorAffix."q/sansSerif" = "tailed"
 selectorAffix."q/hookTopBase" = "tailed"
-selectorAffix.qRTail = "straight"
+selectorAffix."q/tailless" = "straight"
 selectorAffix.gha = "tailed"
 
 [prime.q.variants-buildup.stages.terminal.diagonal-tailed]
@@ -4001,7 +4001,7 @@ descriptionAffix = "diagonally tailed terminal"
 selectorAffix.q = "diagonalTailed"
 selectorAffix."q/sansSerif" = "diagonalTailed"
 selectorAffix."q/hookTopBase" = "diagonalTailed"
-selectorAffix.qRTail = "straight"
+selectorAffix."q/tailless" = "straight"
 selectorAffix.gha = "diagonalTailed"
 
 [prime.q.variants-buildup.stages.serifs.serifless]
@@ -4011,7 +4011,7 @@ descriptionJoiner = "without"
 selectorAffix.q = "serifless"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "serifless"
-selectorAffix.qRTail = "serifless"
+selectorAffix."q/tailless" = "serifless"
 selectorAffix.gha = "serifless"
 
 [prime.q.variants-buildup.stages.serifs.bottom-serifed]
@@ -4021,7 +4021,7 @@ descriptionAffix = "serif at bottom"
 selectorAffix.q = "bottomSerifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "bottomSerifed"
-selectorAffix.qRTail = "serifless"
+selectorAffix."q/tailless" = "serifless"
 selectorAffix.gha = "bottomSerifed"
 
 [prime.q.variants-buildup.stages.serifs.motion-serifed]
@@ -4031,7 +4031,7 @@ descriptionAffix = "motion serifs"
 selectorAffix.q = "motionSerifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "serifless"
-selectorAffix.qRTail = "motionSerifed"
+selectorAffix."q/tailless" = "motionSerifed"
 selectorAffix.gha = "serifless"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eared]
@@ -4042,7 +4042,7 @@ descriptionAffix = "serifs"
 selectorAffix.q = "serifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "bottomSerifed"
-selectorAffix.qRTail = "motionSerifed"
+selectorAffix."q/tailless" = "motionSerifed"
 selectorAffix.gha = "bottomSerifed"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eareless]
@@ -4053,7 +4053,7 @@ descriptionAffix = "serifs"
 selectorAffix.q = "bottomSerifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "bottomSerifed"
-selectorAffix.qRTail = "serifless"
+selectorAffix."q/tailless" = "serifless"
 selectorAffix.gha = "bottomSerifed"
 
 
