Initial cleanup of #2556 .

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2767,7 +2767,6 @@ selectorAffix.g = ""
 selectorAffix."g/sansSerif" = ""
 selectorAffix."g/hookTopBase" = ""
 selectorAffix."gScript" = ""
-selectorAffix."gScriptCrossedTail" = ""
 selectorAffix."g/single/autoSerifed/slab" = ""
 selectorAffix."g/single/autoSerifed/sans" = ""
 
@@ -2781,7 +2780,6 @@ selectorAffix.g = "doubleStorey"
 selectorAffix."g/sansSerif" = "doubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScript" = "singleStoreyScriptCut"
-selectorAffix."gScriptCrossedTail" = "singleStoreyScriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "singleStoreySerifed"
 selectorAffix."g/single/autoSerifed/sans" = "singleStoreySerifless"
 
@@ -2792,7 +2790,6 @@ selectorAffix.g = "openDoubleStorey"
 selectorAffix."g/sansSerif" = "openDoubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScript" = "singleStoreyScriptCut"
-selectorAffix."gScriptCrossedTail" = "singleStoreyScriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "singleStoreySerifed"
 selectorAffix."g/single/autoSerifed/sans" = "singleStoreySerifless"
 
@@ -2804,7 +2801,6 @@ selectorAffix.g = "singleStorey"
 selectorAffix."g/sansSerif" = "singleStorey"
 selectorAffix."g/hookTopBase" = "singleStorey"
 selectorAffix."gScript" = "singleStorey"
-selectorAffix."gScriptCrossedTail" = "singleStorey"
 selectorAffix."g/single/autoSerifed/slab" = "singleStorey"
 selectorAffix."g/single/autoSerifed/sans" = "singleStorey"
 
@@ -2818,7 +2814,6 @@ selectorAffix.g = ""
 selectorAffix."g/sansSerif" = ""
 selectorAffix."g/hookTopBase" = ""
 selectorAffix."gScript" = ""
-selectorAffix."gScriptCrossedTail" = ""
 selectorAffix."g/single/autoSerifed/slab" = ""
 selectorAffix."g/single/autoSerifed/sans" = ""
 
@@ -2829,7 +2824,6 @@ selectorAffix.g = "flatHook"
 selectorAffix."g/sansSerif" = "flatHook"
 selectorAffix."g/hookTopBase" = "flatHook"
 selectorAffix."gScript" = "flatHook"
-selectorAffix."gScriptCrossedTail" = ""
 selectorAffix."g/single/autoSerifed/slab" = "flatHook"
 selectorAffix."g/single/autoSerifed/sans" = "flatHook"
 
@@ -2839,7 +2833,6 @@ selectorAffix.g = "serifless"
 selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "serifless"
 selectorAffix."g/single/autoSerifed/sans" = "serifless"
 
@@ -2850,7 +2843,6 @@ selectorAffix.g = "serifed"
 selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "serifed"
 selectorAffix."g/single/autoSerifed/sans" = "serifed"
 
@@ -2861,7 +2853,6 @@ selectorAffix.g = "earlessCorner"
 selectorAffix."g/sansSerif" = "earlessCorner"
 selectorAffix."g/hookTopBase" = "earlessCornerHTB"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "earlessCorner"
 selectorAffix."g/single/autoSerifed/sans" = "earlessCorner"
 
@@ -2872,7 +2863,6 @@ selectorAffix.g = "earlessRounded"
 selectorAffix."g/sansSerif" = "earlessRounded"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "earlessRounded"
 selectorAffix."g/single/autoSerifed/sans" = "earlessRounded"
 
@@ -3954,6 +3944,7 @@ selectorAffix.q = ""
 selectorAffix."q/sansSerif" = ""
 selectorAffix."q/hookTopBase" = ""
 selectorAffix."q/tailless" = ""
+selectorAffix.qRTail = ""
 selectorAffix.gha = ""
 
 [prime.q.variants-buildup.stages.body.earless-corner]
@@ -3963,6 +3954,7 @@ selectorAffix.q = "earlessCorner"
 selectorAffix."q/sansSerif" = "earlessCorner"
 selectorAffix."q/hookTopBase" = "earlessCorner"
 selectorAffix."q/tailless" = "earlessCorner"
+selectorAffix.qRTail = "earlessCorner"
 selectorAffix.gha = ""
 
 [prime.q.variants-buildup.stages.body.earless-rounded]
@@ -3972,6 +3964,7 @@ selectorAffix.q = "earlessRounded"
 selectorAffix."q/sansSerif" = "earlessRounded"
 selectorAffix."q/hookTopBase" = ""
 selectorAffix."q/tailless" = "earlessRounded"
+selectorAffix.qRTail = "earlessRounded"
 selectorAffix.gha = ""
 
 [prime.q.variants-buildup.stages.terminal."*"]
@@ -3984,6 +3977,7 @@ selectorAffix.q = "straight"
 selectorAffix."q/sansSerif" = "straight"
 selectorAffix."q/hookTopBase" = "straight"
 selectorAffix."q/tailless" = "straight"
+selectorAffix.qRTail = "straight"
 selectorAffix.gha = "straight"
 
 [prime.q.variants-buildup.stages.terminal.tailed]
@@ -3993,6 +3987,7 @@ selectorAffix.q = "tailed"
 selectorAffix."q/sansSerif" = "tailed"
 selectorAffix."q/hookTopBase" = "tailed"
 selectorAffix."q/tailless" = "straight"
+selectorAffix.qRTail = "straight"
 selectorAffix.gha = "tailed"
 
 [prime.q.variants-buildup.stages.terminal.diagonal-tailed]
@@ -4002,6 +3997,7 @@ selectorAffix.q = "diagonalTailed"
 selectorAffix."q/sansSerif" = "diagonalTailed"
 selectorAffix."q/hookTopBase" = "diagonalTailed"
 selectorAffix."q/tailless" = "straight"
+selectorAffix.qRTail = "straight"
 selectorAffix.gha = "diagonalTailed"
 
 [prime.q.variants-buildup.stages.serifs.serifless]
@@ -4012,6 +4008,7 @@ selectorAffix.q = "serifless"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "serifless"
 selectorAffix."q/tailless" = "serifless"
+selectorAffix.qRTail = "serifless"
 selectorAffix.gha = "serifless"
 
 [prime.q.variants-buildup.stages.serifs.bottom-serifed]
@@ -4021,7 +4018,8 @@ descriptionAffix = "serif at bottom"
 selectorAffix.q = "bottomSerifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "bottomSerifed"
-selectorAffix."q/tailless" = "serifless"
+selectorAffix."q/tailless" = "bottomSerifed"
+selectorAffix.qRTail = "serifless"
 selectorAffix.gha = "bottomSerifed"
 
 [prime.q.variants-buildup.stages.serifs.motion-serifed]
@@ -4032,6 +4030,7 @@ selectorAffix.q = "motionSerifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "serifless"
 selectorAffix."q/tailless" = "motionSerifed"
+selectorAffix.qRTail = "motionSerifed"
 selectorAffix.gha = "serifless"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eared]
@@ -4042,7 +4041,8 @@ descriptionAffix = "serifs"
 selectorAffix.q = "serifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "bottomSerifed"
-selectorAffix."q/tailless" = "motionSerifed"
+selectorAffix."q/tailless" = "serifed"
+selectorAffix.qRTail = "motionSerifed"
 selectorAffix.gha = "bottomSerifed"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eareless]
@@ -4053,7 +4053,8 @@ descriptionAffix = "serifs"
 selectorAffix.q = "bottomSerifed"
 selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "bottomSerifed"
-selectorAffix."q/tailless" = "serifless"
+selectorAffix."q/tailless" = "bottomSerifed"
+selectorAffix.qRTail = "serifless"
 selectorAffix.gha = "bottomSerifed"
 
 
