Make Dotless J with Stroke and Hook auto-serifed.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1059,13 +1059,13 @@ selectorAffix.JCurlyTail = "descending"
 [prime.capital-j.variants-buildup.stages.hook."*"]
 next = "serifs"
 
-[prime.capital-j.variants-buildup.stages.hook.standard]
+[prime.capital-j.variants-buildup.stages.hook.bent-hook]
 rank = 1
 keyAffix = ""
-selectorAffix.J = ""
-selectorAffix."J/noDescend" = ""
-selectorAffix."J/sansSerif" = ""
-selectorAffix.JCurlyTail = ""
+selectorAffix.J = "bentHook"
+selectorAffix."J/noDescend" = "bentHook"
+selectorAffix."J/sansSerif" = "bentHook"
+selectorAffix.JCurlyTail = "bentHook"
 
 [prime.capital-j.variants-buildup.stages.hook.flat-hook]
 rank = 2
@@ -1073,7 +1073,7 @@ descriptionAffix = "flat hook"
 selectorAffix.J = "flatHook"
 selectorAffix."J/noDescend" = "flatHook"
 selectorAffix."J/sansSerif" = "flatHook"
-selectorAffix.JCurlyTail = ""
+selectorAffix.JCurlyTail = "bentHook"
 
 [prime.capital-j.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -3082,29 +3082,33 @@ tagKind = "letter"
 [prime.j.variants.serifless]
 rank = 1
 description = "`j` without serif"
-selector.dotlessj = "serifless"
-selector."dotlessj/sansSerif" = "serifless"
+selector.dotlessj = "bentHookSerifless"
+selector."dotlessj/sansSerif" = "bentHookSerifless"
+selector.dotlessjHookTop = "bentHook"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.serifed]
 rank = 2
 description = "`j` with top serif"
-selector.dotlessj = "serifed"
-selector."dotlessj/sansSerif" = "serifless"
+selector.dotlessj = "bentHookSerifed"
+selector."dotlessj/sansSerif" = "bentHookSerifless"
+selector.dotlessjHookTop = "bentHook"
 selector.dotlessjCurlyTail = "serifed"
 
 [prime.j.variants.straight-line]
 rank = 3
 description = "`j` like a straight line"
-selector.dotlessj = "straightLine"
-selector."dotlessj/sansSerif" = "straightLine"
+selector.dotlessj = "straightSerifless"
+selector."dotlessj/sansSerif" = "straightSerifless"
+selector.dotlessjHookTop = "straight"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.hooky]
 rank = 4
 description = "`j` like a straight line with top serif"
-selector.dotlessj = "hooky"
-selector."dotlessj/sansSerif" = "straightLine"
+selector.dotlessj = "straightSerifed"
+selector."dotlessj/sansSerif" = "straightSerifless"
+selector.dotlessjHookTop = "straight"
 selector.dotlessjCurlyTail = "serifed"
 
 [prime.j.variants.flat-hook-serifless]
@@ -3112,6 +3116,7 @@ rank = 5
 description = "`j` with flat terminal hook"
 selector.dotlessj = "flatHookSerifless"
 selector."dotlessj/sansSerif" = "flatHookSerifless"
+selector.dotlessjHookTop = "flatHook"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.flat-hook-serifed]
@@ -3119,6 +3124,7 @@ rank = 6
 description = "`j` with flat terminal hook and top serif"
 selector.dotlessj = "flatHookSerifed"
 selector."dotlessj/sansSerif" = "flatHookSerifless"
+selector.dotlessjHookTop = "flatHook"
 selector.dotlessjCurlyTail = "serifed"
 
 [prime.j.variants.diagonal-tailed-serifless]
@@ -3126,6 +3132,7 @@ rank = 7
 description = "`j` with diagonal tail"
 selector.dotlessj = "diagonalTailedSerifless"
 selector."dotlessj/sansSerif" = "diagonalTailedSerifless"
+selector.dotlessjHookTop = "diagonalTailed"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.diagonal-tailed-serifed]
@@ -3133,6 +3140,7 @@ rank = 8
 description = "`j` with top serif and diagonal tail"
 selector.dotlessj = "diagonalTailedSerifed"
 selector."dotlessj/sansSerif" = "diagonalTailedSerifless"
+selector.dotlessjHookTop = "diagonalTailed"
 selector.dotlessjCurlyTail = "serifed"
 
 
