--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3084,7 +3084,7 @@ rank = 1
 description = "`j` without serif"
 selector.dotlessj = "bentHookSerifless"
 selector."dotlessj/sansSerif" = "bentHookSerifless"
-selector.dotlessjHookTop = "bentHook"
+selector.dotlessjHookTop = "bentHookSerifless"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.serifed]
@@ -3092,7 +3092,7 @@ rank = 2
 description = "`j` with top serif"
 selector.dotlessj = "bentHookSerifed"
 selector."dotlessj/sansSerif" = "bentHookSerifless"
-selector.dotlessjHookTop = "bentHook"
+selector.dotlessjHookTop = "bentHookShortSerifed"
 selector.dotlessjCurlyTail = "serifed"
 
 [prime.j.variants.straight-line]
@@ -3100,7 +3100,7 @@ rank = 3
 description = "`j` like a straight line"
 selector.dotlessj = "straightSerifless"
 selector."dotlessj/sansSerif" = "straightSerifless"
-selector.dotlessjHookTop = "straight"
+selector.dotlessjHookTop = "straightSerifless"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.hooky]
@@ -3108,7 +3108,7 @@ rank = 4
 description = "`j` like a straight line with top serif"
 selector.dotlessj = "straightSerifed"
 selector."dotlessj/sansSerif" = "straightSerifless"
-selector.dotlessjHookTop = "straight"
+selector.dotlessjHookTop = "straightShortSerifed"
 selector.dotlessjCurlyTail = "serifed"
 
 [prime.j.variants.flat-hook-serifless]
@@ -3116,7 +3116,7 @@ rank = 5
 description = "`j` with flat terminal hook"
 selector.dotlessj = "flatHookSerifless"
 selector."dotlessj/sansSerif" = "flatHookSerifless"
-selector.dotlessjHookTop = "flatHook"
+selector.dotlessjHookTop = "flatHookSerifless"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.flat-hook-serifed]
@@ -3124,7 +3124,7 @@ rank = 6
 description = "`j` with flat terminal hook and top serif"
 selector.dotlessj = "flatHookSerifed"
 selector."dotlessj/sansSerif" = "flatHookSerifless"
-selector.dotlessjHookTop = "flatHook"
+selector.dotlessjHookTop = "flatHookShortSerifed"
 selector.dotlessjCurlyTail = "serifed"
 
 [prime.j.variants.diagonal-tailed-serifless]
@@ -3132,7 +3132,7 @@ rank = 7
 description = "`j` with diagonal tail"
 selector.dotlessj = "diagonalTailedSerifless"
 selector."dotlessj/sansSerif" = "diagonalTailedSerifless"
-selector.dotlessjHookTop = "diagonalTailed"
+selector.dotlessjHookTop = "diagonalTailedSerifless"
 selector.dotlessjCurlyTail = "serifless"
 
 [prime.j.variants.diagonal-tailed-serifed]
@@ -3140,7 +3140,7 @@ rank = 8
 description = "`j` with top serif and diagonal tail"
 selector.dotlessj = "diagonalTailedSerifed"
 selector."dotlessj/sansSerif" = "diagonalTailedSerifless"
-selector.dotlessjHookTop = "diagonalTailed"
+selector.dotlessjHookTop = "diagonalTailedShortSerifed"
 selector.dotlessjCurlyTail = "serifed"
 
 
