Reduce glyph count surrounding `g` and cleanup.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2763,19 +2763,6 @@ descriptionLeader = "`g`"
 next = "openness"
 rank = 1
 descriptionAffix = "double-storey shape"
-selectorAffix.g = ""
-selectorAffix."g/sansSerif" = ""
-selectorAffix."g/hookTopBase" = ""
-selectorAffix."gScript" = ""
-selectorAffix."g/single/autoSerifed/slab" = ""
-selectorAffix."g/single/autoSerifed/sans" = ""
-
-[prime.g.variants-buildup.stages.openness."*"]
-next = "END"
-
-[prime.g.variants-buildup.stages.openness.closed]
-rank = 1
-keyAffix = ""
 selectorAffix.g = "doubleStorey"
 selectorAffix."g/sansSerif" = "doubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreySerifless"
@@ -2783,15 +2770,28 @@ selectorAffix."gScript" = "singleStoreyScriptCut"
 selectorAffix."g/single/autoSerifed/slab" = "singleStoreySerifed"
 selectorAffix."g/single/autoSerifed/sans" = "singleStoreySerifless"
 
+[prime.g.variants-buildup.stages.openness."*"]
+next = "END"
+
+[prime.g.variants-buildup.stages.openness.closed]
+rank = 1
+keyAffix = ""
+selectorAffix.g = ""
+selectorAffix."g/sansSerif" = ""
+selectorAffix."g/hookTopBase" = ""
+selectorAffix."gScript" = ""
+selectorAffix."g/single/autoSerifed/slab" = ""
+selectorAffix."g/single/autoSerifed/sans" = ""
+
 [prime.g.variants-buildup.stages.openness.open]
 rank = 1
 descriptionAffix = "open contour"
-selectorAffix.g = "openDoubleStorey"
-selectorAffix."g/sansSerif" = "openDoubleStorey"
-selectorAffix."g/hookTopBase" = "singleStoreySerifless"
-selectorAffix."gScript" = "singleStoreyScriptCut"
-selectorAffix."g/single/autoSerifed/slab" = "singleStoreySerifed"
-selectorAffix."g/single/autoSerifed/sans" = "singleStoreySerifless"
+selectorAffix.g = "open"
+selectorAffix."g/sansSerif" = "open"
+selectorAffix."g/hookTopBase" = ""
+selectorAffix."gScript" = ""
+selectorAffix."g/single/autoSerifed/slab" = ""
+selectorAffix."g/single/autoSerifed/sans" = ""
 
 [prime.g.variants-buildup.stages.storey.single-storey]
 next = "hook"
@@ -2807,7 +2807,7 @@ selectorAffix."g/single/autoSerifed/sans" = "singleStorey"
 [prime.g.variants-buildup.stages.hook."*"]
 next = "ear"
 
-[prime.g.variants-buildup.stages.hook.standard]
+[prime.g.variants-buildup.stages.hook.bent-hook]
 rank = 1
 keyAffix = ""
 selectorAffix.g = ""
