Let `cyrl/ghe.SRB` respond to `serifed-asymmetric` variants.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2999,7 +2999,7 @@ description = "`i` with shorter top serif and full bottom serif"
 selector.dotlessi = "serifedAsymmetric"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "serifed"
-selector."cyrl/ghe.SRB" = "zshaped"
+selector."cyrl/ghe.SRB" = "zshapedAsymmetric"
 
 [prime.i.variants.tailed]
 rank = 7
